<resources>
    <string name="app_name">MemeGram</string>
    <string name="sign_up">Sign Up</string>
    <string name="memegram">MemeGram</string>
    <string name="welcome">Welcome</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="update">Update Profile</string>
    <string name="full_name">Full Name</string>
    <string name="add_meme">Add Meme</string>
    <string name="upload_meme_fragment">Upload Meme Fragment</string>
    <string name="upload_meme">Upload Meme</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="post">Post</string>
    <string name="caption">Caption</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="delete_post">Delete Post</string>
    <string name="category">Category:</string>
    <string name="search_meme">Search Meme</string>
    <string name="dislikes">Dislikes</string>
    <string name="change_password">Change Password</string>

    <string-array name="categories">
        <item> Animals </item>
        <item> Anime </item>
        <item> Basketball </item>
        <item> Car </item>
        <item> Comics </item>
        <item> Dark Humor </item>
        <item> Gaming </item>
        <item> History </item>
        <item> Music </item>
        <item> Politics </item>
        <item> Puns </item>
        <item> Science and Tech </item>
        <item> Football </item>
        <item> Tv and Film </item>
    </string-array>
</resources>
