<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/MemeG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/heavy"
        android:text="@string/memegram"
        android:textColor="@color/grey"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/profile"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/MemeG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageview"
        android:src="@drawable/pokemon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/profilename"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <EditText
        android:id="@+id/fullname"
        android:hint="@string/full_name"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/profilename"
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:fontFamily="@font/light"
        android:layout_height="43dp"
        android:background="@drawable/input_field"/>

    <EditText
        android:id="@+id/user_name"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@+id/fullname"
        android:layout_width="300dp"
        android:fontFamily="@font/light"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_field"/>


    <EditText
        android:id="@+id/pass_word"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:ems="10"
        android:fontFamily="@font/light"
        android:layout_below="@+id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:background="@drawable/input_field"
        android:hint="@string/password"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_below="@+id/pass_word"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:fontFamily="@font/light"
        android:textColor="@color/white"/>
</RelativeLayout>