<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/MemeG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/heavy"
        android:text="@string/memegram"
        android:textColor="@color/grey"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/uploadmeme"
        android:text="@string/upload_meme"
        android:textSize="20sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/light"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/MemeG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageChosen"
        android:layout_below="@+id/uploadmeme"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_photo"
        android:adjustViewBounds="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/choosephoto"
        android:textSize="16sp"
        android:layout_below="@+id/imageChosen"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_height="wrap_content"
        android:fontFamily="@font/light"
        android:text="@string/choose_photo"/>

    <EditText
        android:id="@+id/desc"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:layout_below="@+id/choosephoto"
        android:fontFamily="@font/light"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:background="@drawable/inputfield_caption"
        android:hint="@string/caption" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/category"
            android:fontFamily="@font/heavy"
            android:layout_marginStart="35dp"/>
        <Spinner
            android:id="@+id/category_Spinner"
            android:layout_width="200dp"
            android:layout_height="43dp"
            android:dropDownWidth="200dp"
            android:layout_marginStart="15dp"
            android:entries="@array/categories"
            android:spinnerMode="dropdown" />
    </LinearLayout>


    <Button
        android:id="@+id/postButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/post"
        android:textAllCaps="false"
        android:layout_below="@+id/linear1"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:textSize="16sp"
        android:fontFamily="@font/light"
        android:textColor="@color/white"/>

</RelativeLayout>