<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SinglePostActivity">

    <ImageView
        android:id="@+id/singleMeme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/postCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/singleMeme"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/caption"
        android:layout_marginStart="35dp"
        android:textColor="@color/grey"
        android:fontFamily="@font/light"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postCaption">

        <TextView
            android:id="@+id/cate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/category"
            android:layout_marginStart="35dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/heavy"/>
        <TextView
            android:id="@+id/category_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="Animals"
            android:layout_marginStart="15dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/light"/>
    </LinearLayout>

    <Button
        android:id="@+id/deletePost"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/linear_layout"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:textAllCaps="false"
        android:onClick="delete"
        android:fontFamily="@font/light"
        android:textColor="@color/white"
        android:text="@string/delete_post"/>

</RelativeLayout>